--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                 mapTypeId: google.maps.MapTypeId.TERRAIN
             };
             var map = new google.maps.Map(document.getElementById("map"), myOptions);
+            {% for quake_coord in quake_coords %}
+	        pos = new google.maps.LatLng({{quake_coord.0}}, {{quake_coord.1}});
+	        var marker = new google.maps.Marker({
+		    position: pos,
+		    map: map,
+		    title:"Earthquake!"
+		});
+	    {% endfor %}
         }
     </script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
