--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+&#65279;<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Earthquake Watcher Framework</title>
@@ -8,95 +8,141 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/watchlist.css" />
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-    <script type="text/javascript">
-        function initialize() {
-            var latlng = new google.maps.LatLng({{coords}});
-            var myOptions =
-            {
-                zoom: {{zoom}},
-                center: latlng,
-                mapTypeId: google.maps.MapTypeId.TERRAIN
-            };
-            var map = new google.maps.Map(document.getElementById("map"), myOptions);
-            {% for quake_coord in quake_coords %}
-	        pos = new google.maps.LatLng({{quake_coord.0}}, {{quake_coord.1}});
-	        var marker = new google.maps.Marker({
-		    position: pos,
-		    map: map,
-		    title:"Earthquake!"
-		});
-	    {% endfor %}
-        }
-    </script>
+ 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  
-    <script>
-	$(function() {
-		$( "#tabs" ).tabs({
-			ajaxOptions: {
-				error: function( xhr, status, index, anchor ) {
-					$( anchor.hash ).html(
-						"Couldn't load this tab. We'll try to fix this as soon as possible. " +
-						"If this wouldn't be a demo." );
-				}
-			}
-		});
-	});
+ 
+    <script type="text/javascript">
+    var geocoder;
+    var map;
+        function initialize() {
+    geocoder = new google.maps.Geocoder();
+ 
+    //////////////////////////////////////////////////////////////
+    ///////////Go to the watch place.////////////////////////////
+    ////////////////////////////////////////////////////////////
+ 
+    // coordsToGo is the location where the user selects to watch
+    var latlng = new google.maps.LatLng({{coordsToGo}});
+ 
+    // set up map style
+    var myOptions = {
+      zoom: 6,
+      center: latlng,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+ 
+    // create the map
+    map = new google.maps.Map(document.getElementById("map"),myOptions);
+ 
+ 
+   // create the infowindow
+    var infowindow = new google.maps.InfoWindow({
+        content: ""
+    });    
+ 
+    //////////////////////////////////////////////////////////////////////////////////
+    ////////// Add marker and earthquake information around earthquake area./////////
+    ////////////////////////////////////////////////////////////////////////////////
+    var pos;
+    {% for quake_coord in quake_coords %}
+      // location to add the marker
+      pos = new google.maps.LatLng({{quake_coord.2}});
+      // apply the marker, marker are identified by the earthquake id obtained from USGS
+      var marker{{quake_coord.0}} = new google.maps.Marker({
+         position: pos,
+         map: map,
+         title:"Earthquake!"
+      });
+ 
+      // let google capture the marker's click event, and display the basic earthquake info
+      google.maps.event.addListener(marker{{quake_coord.0}}, 'click', function() {
+            infowindow.setContent("<b>Time:</b> {{quake_coord.1}}<br/>"+
+                                  "<b>Coordinates:</b> {{quake_coord.2}}<br/>"+
+                                  "<b>Magnitude:</b> {{quake_coord.3}}<br/>"+
+                                  "<b>Depth:</b> {{quake_coord.4}}<br/>"+
+                                  "<b>Region: </b>{{quake_coord.5}}");
+            infowindow.open(map,marker{{quake_coord.0}});
+      });
+    {% endfor %}
+ 
+   
+    //////////////////////////////////////////////////////////////////////////
+    /////////////// Add red circules around earthquake area./////////////////
+   /////////////////////////////////////////////////////////////////////////
+    var quakeList = {};
+    {% for quake_coord in quake_coords %}
+      quakeList['{{quake_coord.0}}'] = {
+          center: new google.maps.LatLng({{quake_coord.2}}),
+          magnitude: {{quake_coord.3}}
+      };
+    {% endfor %}
+ 
+    // configure circles and draw them on the map
+    var circle;
+    for (var quake in quakeList) {
+        var circleOptions = {
+          strokeColor: "#FF0000",
+          strokeOpacity: 0.10,
+          strokeWeight: 2,
+          fillColor: "#FF0000",
+          fillOpacity: 0.10,
+          map: map,
+          center: quakeList[quake].center,
+          radius: 10000 * quakeList[quake].magnitude
+        };
+        circle = new google.maps.Circle(circleOptions);
+     }
+ 
+        }
+  function codeAddress() {
+    var address = document.getElementById("address").value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == google.maps.GeocoderStatus.OK) {
+        map.panTo(results[0].geometry.location);
+      } else {
+        alert("Geocode was not successful for the following reason: " + status);
+      }
+    });
+  }
+ 
+//JQuery UI Ajax Tab Code
+    $(function() {
+        $( "#tabs" ).tabs({
+            ajaxOptions: {
+                error: function( xhr, status, index, anchor ) {
+                    $( anchor.hash ).html(
+                        "Couldn't load this tab. We'll try to fix this as soon as possible. " +
+                        "If this wouldn't be a demo." );
+                }
+            }
+        });
+    });
     </script>
 </head>
 <body onload="initialize()">
     <!-- Google Map Part -->
-	<div id="map"></div>
+    <div id="map"></div>
     <!-- Related Information Part -->
-	<div id="tab_container">
-
-
-
-
-
-
-
-
-
-
+    <div id="tab_container">
+ 
 <div id="tabs">
      <ul>
-         <li><a href="apis/search.html"><span>Search</span></a></li>
+         <li><a href="#search">Search</a></li>
          <li><a href="apis/news.html"><span>News</span></a></li>
          <li><a href="apis/video.html"><span>Videos</span></a></li>
          <li><a href="apis/photos.html"><span>Photos</span></a></li>
          <li><a href="apis/friends.html"><span>Friends</span></a></li>
          <li><a href="apis/tweets.html"><span>Tweets</span></a></li>
      </ul>
+ 
+     <div id="search">
+    <input id="address" type="textbox" value="Sydney, NSW">
+    <input type="button" value="Geocode" onclick="codeAddress()">
+     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
     </div>
 </body>
 </html>
