--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title>Earthquake Watcher Framework</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="stylesheets/layout.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/watchlist.css" />
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
- 
+
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
@@ -121,7 +120,7 @@
     });
     </script>
 </head>
-<body onload="initialize()">
+<body onload="initialize()", style="font-size:62.5%;">
     <!-- Google Map Part -->
     <div id="map"></div>
     <!-- Related Information Part -->
