--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<li><a href="apis/video.html"><span>Videos</span></a></li>
 				<li><a href="apis/photos.html"><span>Photos</span></a></li>
 				<li><a href="apis/friends.html"><span>Friends</span></a></li>
-				<li><a href="apis/tweets.html"><span>Tweets</span></a></li>
+				<li><a href="apis/tweets.html?coords=34,-118"><span>Tweets</span></a></li>
 			</ul>
 			
 			<div id="search">
