Testing news tab with google news search demo code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-&#65279;<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
  
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -120,11 +120,11 @@
     });
     </script>
 </head>
-<body onload="initialize()", style="font-size:62.5%;">
+<body onload="initialize()">
     <!-- Google Map Part -->
     <div id="map"></div>
     <!-- Related Information Part -->
-    <div id="tab_container">
+    <div id="tab_container" style="font-size:62.5%;">
  
 <div id="tabs">
      <ul>
