--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/watchlist.css" />
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 
+    <script src="https://www.google.com/jsapi?key=ABQIAAAAc8ZpHIHeUmpfmlqWVqwKphT3yGmeNLtbOVl0YckPuPNp7bcOuRSDXFX3OCaQXrypTvYscF2ntYuq1A"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
  
     <script type="text/javascript">
+    google.load('search', '1');
     var geocoder;
     var map;
         function initialize() {
