--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head> 
 </head> 
  
-<frameset cols="67%,33%">
-  <frame src="apis/googlemap.html" name="map" scrolling="no" noresize="noresize" frameborder="no"/>
+<frameset cols="62%,38%">
+  <frame src="apis/googlemap.html" id="googlemap" name="gmap" scrolling="no" noresize="noresize" frameborder="no"/>
   <frameset rows="3%,97%">
-    <frame src="frames/tabs.html" scrolling="no" noresize="noresize" frameborder="no"/>
-    <frame name="target" src="apis/search.html" scrolling="no" noresize="noresize" frameborder="no"/>
+    <frame src="frames/tabs.html" scrolling="no" noresize="noresize" frameborder="no" name="tab" style="overflow: hidden"/>
+    <frame name="target" src="apis/search.html" noresize="noresize" frameborder="no"/>
   </frameset>
 </frameset>
  
