added search btn

--- a/apis/search.html
+++ b/apis/search.html
@@ -56,6 +56,6 @@
 <body>
 	<b>Please enter a location to watch: </b><br/>
 	<input type="text" name="search" id="searchbox">
-	<input type="submit" name="go" id="searchbtn" value="Search"><br/><br/>
+	<a href="#" id="searchbtn">Search</a><br/><br/>
 </body>
 </html>
