fixed minor bug

--- a/apis/search.html
+++ b/apis/search.html
@@ -7,6 +7,9 @@
 	<script type="text/javascript">
 	    $(document).ready(function ()
 		{
+			$("#result").remove();
+			$("#choices").remove();
+			
 			var currentWatching = getCookieValue("region");
 			var curWatchingGeocode = getCookieValue("geocode");
 			
