--- a/apis/photos.html
+++ b/apis/photos.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
-  Photo
+  {{photolist}}<br/>
+  {{isResultEmpty}}<br/>
+  {{isCookieSet}}<br/>
+  {{region}}<br/>
 </body>
 </html>
