added modules that parse out all friend's information

--- a/apis/friends.html
+++ b/apis/friends.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
-  Friends
+  Coming soon...<br/>
+  {% for info in allFriendsInfo %}
+	{{info.0}} {{info.1}} {{info.2}} <br/>
+  {% endfor %}
 </body>
 </html>
