changed fb tab so that the fb tab shows the access token and expire time

--- a/apis/friends.html
+++ b/apis/friends.html
@@ -2,9 +2,11 @@
 <head>
 </head>
 <body>
-  Coming soon...<br/>
-  {% for info in allFriendsInfo %}
-	{{info.0}} {{info.1}} {{info.2}} <br/>
-  {% endfor %}
+	{% if isCookieSet %}
+		access token: {{access_token}}<br/>
+		expires: {{expires}}
+	{% else %}
+		<a href="https://www.facebook.com/dialog/oauth?client_id=204588852914237&redirect_uri=http://earthquake-watch.appspot.com" target="_parent">Facebook Login</a><br/>
+	{% endif %}
 </body>
 </html>
