--- a/apis/news.html
+++ b/apis/news.html
@@ -48,7 +48,7 @@
       searchControl.draw(document.getElementById("content"));
     
       //Search for the selected region and the word Earthquake
-      searchControl.execute('{{region}}' + ' Earthquake');
+      searchControl.execute("{{region}}" + " Earthquake");
     }
     
     google.setOnLoadCallback(OnLoad);
