--- a/apis/search.html
+++ b/apis/search.html
@@ -57,7 +57,8 @@
 	</script>
 </head>
 <body>
-	<b>Please enter a location to watch: </b><br/>
+	<b>Enter a location and go there!</b><br/>
+    To watch an earthquake, click the marker on the map.<br/>
 	<input type="text" name="search" id="searchbox">
 	<a href="#" id="searchbtn">Search</a><br/><br/>
 </body>
