--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html> 
 <head> 
+<script type="text/javascript">
+document.cookie = "fbreturn=\"{{access_token}}\"";
+</script>
 </head> 
  
 <frameset cols="62%,38%">
