just added the permission to access the user's friend info

--- a/apis/friends.html
+++ b/apis/friends.html
@@ -6,7 +6,7 @@
 		access token: {{access_token}}<br/>
 		expires: {{expires}}
 	{% else %}
-		<a href="https://www.facebook.com/dialog/oauth?client_id=204588852914237&redirect_uri=http://earthquake-watch.appspot.com" target="_parent">Facebook Login</a><br/>
+		<a href="https://www.facebook.com/dialog/oauth?client_id=204588852914237&redirect_uri=http://earthquake-watch.appspot.com/&scope=friends_location" target="_parent">Facebook Login</a><br/>
 	{% endif %}
 </body>
 </html>
