--- a/apis/news.html
+++ b/apis/news.html
@@ -5,8 +5,8 @@
       .gsc-control{
         width:100% !important;
         font-family:Arial,Helvetica,sans-serif !important;
-        font-size: 0.9em !important;
-	}
+        font-size: 0.8em !important;
+		}
         table.gsc-search-box {
           display: none;
         }
@@ -14,13 +14,17 @@
           border-bottom: 1px solid #303030;
             margin-bottom: 8px !important;
         }
-	.gs-result .gs-snippet {
+		.gs-result .gs-snippet {
           margin-bottom: 8px;
         }
         .gsc-resultsHeader {
           border-bottom: 1px solid #303030 !important;
           margin-bottom: 8px !important;
         }
+		.title {
+		  font-family:Arial,Helvetica,sans-serif !important;
+          font-size: 0.8em !important;
+		}
     </style>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Earthquake News Search</title>
@@ -56,10 +60,10 @@
   </head>
   <body style="font-family: Arial;border: 0 none;">
     {% if isCookieSet %}
-      <b>News around {{region}}. </b><br/>
+      <b class="title">News about the earthquake at {{region}}. </b><br/>
       <div id="content">Loading...</div>
     {% else %}
-      <b> Please select an earthquake... </b>
+      <b class="title"> Please select an earthquake... </b>
     {% endif %}
   </body>
 </html>
